--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -24,6 +24,9 @@
                         <i class="fa-solid fa-right-from-bracket"></i>
                         <a asp-action="SignOutUser" asp-controller="Account">Logout</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User</a>
+                    </li>
                 </ul>
             </div>
         </div>
