--- a/ASI.Basecode.WebApp/Views/User/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/User/Index.cshtml
@@ -76,6 +76,9 @@
             <th>  
                 @Html.DisplayNameFor(model => model.Role)  
             </th>  
+            <th>
+                Profile Picture
+            </th>
             <th>Actions</th>  
         </tr>  
     </thead>  
@@ -96,13 +99,23 @@
                     @Html.DisplayFor(modelItem => item.Password)  
                 </td>  
                 <td>  
-                    @Html.DisplayFor(modelItem => item.Role)  
-                </td>  
+                    @Html.DisplayFor(modelItem => item.Role)
+                </td>
+                <td>
+                    @if (!string.IsNullOrEmpty(item.ProfilePictureUrl))
+                    {
+                        <img src="@item.ProfilePictureUrl" alt="Profile" style="width: 50px; height: 50px; object-fit: cover;" />
+                    }
+                    else
+                    {
+                        <span class="text-muted">No Image</span>
+                    }
+                </td>
                 <td>  
                     <a asp-action="Edit" asp-route-userId="@item.UserId" class="btn btn-sm btn-info">Edit</a> |  
                     <a asp-action="Details" asp-route-userId="@item.UserId" class="btn btn-sm btn-secondary">Details</a> |  
                     <a asp-action="Delete" asp-route-userId="@item.UserId" class="btn btn-sm btn-danger">Delete</a>  
-                </td>  
+                </td>
             </tr>  
         }  
         @if (!Model.Any())  
