--- a/Readiculous.WebApp/Views/Account/Register.cshtml
+++ b/Readiculous.WebApp/Views/Account/Register.cshtml
@@ -22,7 +22,7 @@
                         <form method="post" action="/Account/Register">
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="userId">UserId</label>
-                                <input type="text" id="userId" class="form-control"
+                                <input type="hidden" id="userId" class="form-control"
                                        asp-for="UserId" placeholder="Enter userid" />
                                 <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
